force-app/main/default/objects/ConteudoAplicado_Setting__mdt/ConteudoAplicado_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Conteúdo</label>
    <pluralLabel>Conteúdos</pluralLabel>
</CustomObject>