force-app/main/default/objects/ConteudoAplicado_Setting__mdt/fields/Conteudo__c.field-meta.xml
<CustomField>
    <fullName>Conteudo__c</fullName>
    <label>Conteúdo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5 ABERTOS</fullName>
                <default>true</default>
                <label>5 ABERTOS</label>
            </value>
            <value>
                <fullName>AJUDA 1º LINHA</fullName>
            </value>
            <value>
                <fullName>AJUDA 2º LINHA</fullName>
            </value>
            <value>
                <fullName>AJUDAR O DEFENSOR BLOQUEADO</fullName>
            </value>
            <value>
                <fullName>ARREMESSAR</fullName>
            </value>
            <value>
                <fullName>ARREMESSAR PARADO OU EM MOVIMENTO</fullName>
            </value>
            <value>
                <fullName>AUTOCONFIANÇA</fullName>
            </value>
            <value>
                <fullName>AUTOCONTROLE</fullName>
            </value>
            <value>
                <fullName>AUTONOMIA</fullName>
            </value>
            <value>
                <fullName>BLOQUEAR ARREMESSO</fullName>
            </value>
            <value>
                <fullName>BLOQUEAR DEFENSOR FORA DA BOLA</fullName>
            </value>
            <value>
                <fullName>BLOQUEAR DEFENSOR NA BOLA</fullName>
            </value>
            <value>
                <fullName>CAPACIDADES FÍSICAS</fullName>
            </value>
            <value>
                <fullName>COMUNICAÇÃO</fullName>
            </value>
            <value>
                <fullName>CONSERVAR A POSSE DE BOLA</fullName>
            </value>
            <value>
                <fullName>CONTRA ATACAR EM &quot;TRAILER&quot;</fullName>
            </value>
            <value>
                <fullName>CONTRA-ATACAR EM CORREDORES</fullName>
            </value>
            <value>
                <fullName>CONTRA DEFESA INDIVIDUAL</fullName>
            </value>
            <value>
                <fullName>CONTRA DEFESA ZONA</fullName>
            </value>
            <value>
                <fullName>COOPERAÇÃO</fullName>
            </value>
            <value>
                <fullName>COORDENAÇÃO (CONTROLE DE CORPO E DE BOLA)</fullName>
            </value>
            <value>
                <fullName>CORTAR PARA RECEBER</fullName>
            </value>
            <value>
                <fullName>CRIAR LINHA DE PASSE</fullName>
            </value>
            <value>
                <fullName>CRUZAR</fullName>
            </value>
            <value>
                <fullName>DEFESA DE CORTES E TRIANGULO DEFENSIVO</fullName>
            </value>
            <value>
                <fullName>DESEQUILIBRAR A DEFESA</fullName>
            </value>
            <value>
                <fullName>DESLOCAMENTO POSICIONAMENTO E COMUNICAÇÃO</fullName>
            </value>
            <value>
                <fullName>DESLOCAMENTO POSICIONAMENTO LADO FORTE E LADO FRACO</fullName>
            </value>
            <value>
                <fullName>DESLOCAR PARA RECEBER EM FUNÇÃO DO DRIBLE</fullName>
            </value>
            <value>
                <fullName>DESLOCAR-SE INDUZINDO DIREÇÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>