force-app/main/default/objects/ConteudoAplicado_Setting__mdt/fields/ConteudoAplicado__c.field-meta.xml
<CustomField>
    <fullName>ConteudoAplicado__c</fullName>
    <label>Conteudo Aplicado</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Conteudos</relationshipLabel>
    <relationshipName>Conteudos</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>