force-app/main/default/objects/ConteudoAplicado_Setting__mdt/fields/Estrutura__c.field-meta.xml
<CustomField>
    <fullName>Estrutura__c</fullName>
    <label>Estrutura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1X0 COM BOLA - ATAQUE</fullName>
                <default>true</default>
                <label>1X0 COM BOLA - ATAQUE</label>
            </value>
            <value>
                <fullName>1X1 COM BOLA - ATAQUE</fullName>
            </value>
            <value>
                <fullName>1X1 NA BOLA - DEFESA</fullName>
            </value>
            <value>
                <fullName>2x2 COM BOLA - ATAQUE</fullName>
            </value>
            <value>
                <fullName>2x2 FORA DA BOLA - DEFESA</fullName>
            </value>
            <value>
                <fullName>2x2 SEM BOLA - ATAQUE</fullName>
            </value>
            <value>
                <fullName>3X3 FORA DA BOLA - DEFESA</fullName>
            </value>
            <value>
                <fullName>3X3 SEM BOLA - ATAQUE</fullName>
            </value>
            <value>
                <fullName>4X4 FORA DA BOLA - DEFESA</fullName>
            </value>
            <value>
                <fullName>4X4 SEM BOLA ATAQUE</fullName>
            </value>
            <value>
                <fullName>JOGO FORMAL (5X5) - ATAQUE</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>